Closed Bug 1914418 Opened 2 months ago Closed 2 months ago

Idle inhibitors persist and accumulate after a playing video is moved to a different window

Categories

(Core :: Widget: Gtk, defect, P3)

Firefox 131
defect

Tracking

()

RESOLVED FIXED
131 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox129 --- unaffected
firefox130 --- unaffected
firefox131 --- fixed

People

(Reporter: ke5trel, Assigned: stransky)

References

(Depends on 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Play a video on Ubuntu 24.04.
  2. While it is still playing, drag the tab into a new window (or right-click > Move Tab > Move to New Window).
  3. Pause and play the video multiple times.
  4. Run from terminal:
    dbus-send --print-reply --dest=org.gnome.SessionManager /org/gnome/SessionManager org.gnome.SessionManager.GetInhibitors

Expected:
Inhibitors list is empty when no videos are playing. Screen goes blank after idle timeout.

Actual:
Inhibitors list grows every time video is started. Screen remains on after idle timeout.

Only closing the browser clears the inhibitors list and allows the screen to blank on idle.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=0e7c63c931c823b5cc30c784c8c6c1eda03b8eac&tochange=0e96a2dfdd8c67f36e3dabeec9be3cb26f8e2c69

Regressed by Bug 1896235.

:stransky, since you are the author of the regressor, bug 1896235, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(stransky)
Assignee: nobody → stransky
Status: NEW → ASSIGNED

It's because we recycle the g_cancellable which is kept in cancel state. Doc says it's better to release cancellable after cancel operation and create a new one.

Flags: needinfo?(stransky)
Priority: -- → P3
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/ef91461da3eb [Linux] Don't recycle g_cancellable r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch
QA Whiteboard: [qa-131b-p2]
Depends on: 1917548
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: