Bug 1914418 [Linux] Don't recycle g_cancellable r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D219958